--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.15",
         "easycorp/easyadmin-bundle": "^4.6",
         "knpuniversity/oauth2-client-bundle": "^2.15",
+        "league/oauth2-facebook": "^2.2",
         "league/oauth2-google": "^4.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.22",
