--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,7 +30,9 @@ security:
       remember_me:
         secret: '%kernel.secret%' # required
         lifetime: 604800 # 1 week in seconds
-      custom_authenticator: App\Security\GoogleAuthenticator
+      custom_authenticator:
+        - App\Security\GoogleAuthenticator
+        - App\Security\FacebookAuthenticator
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
