--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,7 @@ security:
         login_path: app_login
         check_path: app_login
         enable_csrf: true
+        default_target_path: projets
         # activate different ways to authenticate
         # https://symfony.com/doc/current/security.html#the-firewall
       logout:
