--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,8 @@ security:
         # https://symfony.com/doc/current/security.html#the-firewall
       logout:
         path: app_logout
+        invalidate_session: false
+        target: app_login
       # https://symfony.com/doc/current/security/impersonating_user.html
       # switch_user: true
       remember_me:
