--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,7 @@ security:
         check_path: app_login
         enable_csrf: true
         default_target_path: projets
+        always_use_default_target_path: true
         # activate different ways to authenticate
         # https://symfony.com/doc/current/security.html#the-firewall
       logout:
@@ -40,7 +41,7 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-  # - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/admin, roles: ROLE_ADMIN }
   # - { path: ^/profile, roles: ROLE_USER }
   role_hierarchy:
     ROLE_ADMIN: ROLE_USER
